--- a/src/app/pages/user-management/user-management.component.html
+++ b/src/app/pages/user-management/user-management.component.html
@@ -1,1 +1,12 @@
+<gdb-btn
+  type="primary"
+  text="Create User"
+  (click)="onCreateNewUser()"
+></gdb-btn>
+
+<gdb-btn
+  type="primary"
+  text="Create Role"
+  (click)="onCreateNewRole()"
+></gdb-btn>
 <ag-grid-angular style="width: 100%" [gridOptions]="gridOptions" />
