--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <ngx-spinner
   bdColor="rgba(0,0,0,0.5)"
   size="medium"
-  color="#860063"
-  type="ball-clip-rotate"
+  color="#fff"
+  type="ball-atom"
 >
-  <span class="loading">Loading...</span>
+  <div class="loading">Loading...</div>
 </ngx-spinner>
 
 <router-outlet></router-outlet>
