--- a/src/components/ag-grid/link-renderer/link-renderer.component.scss
+++ b/src/components/ag-grid/link-renderer/link-renderer.component.scss
@@ -1,9 +1,7 @@
 a {
   text-decoration: none;
-  color: #860063 !important;
+  color: #4067fe !important;
   cursor: pointer;
   font-weight: bold;
-}
-a:hover {
   text-decoration: underline !important;
 }
