--- a/src/components/confirmation/confirmation.component.scss
+++ b/src/components/confirmation/confirmation.component.scss
@@ -59,18 +59,18 @@
 }
 
 .action-btn.primary {
-  background: #860063;
+  background: #4067fe;
   color: white;
 }
 
 .action-btn.secondary {
-  border: 1px solid #860063 !important;
-  color: #860063;
+  border: 1px solid #4067fe !important;
+  color: #4067fe;
   background: white;
   outline: none !important;
 }
 
 .target {
   margin-top: 20px;
-  color: #860063;
+  color: #4067fe;
 }
