--- a/src/components/toggle/toggle.component.scss
+++ b/src/components/toggle/toggle.component.scss
@@ -98,7 +98,7 @@
 
 #button-13 .checkbox:checked ~ .layer {
   width: 100%;
-  background-color: #860063;
+  background-color: #4067fe;
   transition: 0.3s ease all;
   z-index: 1;
 }
