--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -1,7 +1,6 @@
+$color-purple-light: #860363;
+$color-purple-med: #700353;
+$color-purple-dark: #430232;
 
-$color-purple-light : #860363;
-$color-purple-med   : #700353;
-$color-purple-dark  : #430232;
-
-$color-purple-text  :   #860063; 
-$color-purple-btn   :   #860063;
+$color-purple-text: #4067fe;
+$color-purple-btn: #4067fe;
