--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -4,16 +4,15 @@
 
 header {
   height: 50px;
-  background-color: aqua;
-  font-size: 24px;
+  background-color: #2c2a2a;
   display: flex;
+  padding: 0 30px 0 16px;
   align-items: center;
   justify-content: space-between;
   .user-action {
     display: flex;
     gap: 12px;
     align-items: center;
-    margin-right: 30px;
     cursor: pointer;
   }
 }
@@ -23,24 +22,25 @@ section {
   display: flex;
 
   nav {
-    width: 20%;
+    width: 15%;
     a {
       text-decoration: none;
-      color: red;
+      color: #fff;
       padding: 4px 8px;
-      background-color: beige;
-      border: 1px solid lightgray;
+      background-color: #2c2a2a;
       display: block;
       &:hover {
-        background-color: aqua;
+        background-color: #3f3f3f;
         cursor: pointer;
       }
       &.active {
-        background-color: rgb(183, 238, 238);
+        background-color: #3f3f3f;
       }
     }
   }
   main {
-    width: 80%;
+    width: 85%;
+    height: calc(100vh - 50px);
+    overflow: auto;
   }
 }
