--- a/src/components/ag-grid/button-renderer/button-renderer.component.html
+++ b/src/components/ag-grid/button-renderer/button-renderer.component.html
@@ -1,1 +1,6 @@
-<gdb-btn type="secondary" text="View" (click)="onClick()"></gdb-btn>
+<gdb-btn
+  type="secondary"
+  [text]="params.text"
+  [iconUrl]="params.iconUrl"
+  (click)="onClick()"
+></gdb-btn>
