--- a/src/components/text-input/text-input.component.scss
+++ b/src/components/text-input/text-input.component.scss
@@ -1,14 +1,16 @@
 input {
   width: 100%;
-  height: 40px;
+  height: 35px;
   border-radius: 8px;
   border: 1px solid #c6c6c5;
   padding: 7px 14px;
-  color: black;
+  color: #fff;
   position: relative;
   outline: none;
+  background: #444444;
 }
 
 input:disabled {
-  background-color: #ececec;
+  background: #444444;
+  cursor: not-allowed;
 }
