--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -1,15 +1,15 @@
-<form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
+<form [formGroup]="loginForm" (ngSubmit)="submitLogin()" autocomplete="on">
   <div class="form-input">
     <label for="clientId">Client ID *</label>
-    <text-input id="clientId" formControlName="clientId" />
+    <text-input id="clientId" formControlName="clientId" autocomplete="on" />
   </div>
   <div class="form-input">
     <label for="userName">Username *</label>
-    <text-input id="userName" formControlName="userName" />
+    <text-input id="userName" formControlName="userName" autocomplete="on" />
   </div>
   <div class="form-input">
     <label for="password">Password *</label>
-    <text-input id="password" formControlName="password" />
+    <text-input id="password" formControlName="password" autocomplete="on" />
   </div>
   <div class="form-input">
     <label for="grantType">Grant Type *</label>
@@ -25,7 +25,11 @@
   </div>
   <div class="form-input">
     <label for="clientSecret">Client Secret</label>
-    <text-input id="clientSecret" formControlName="clientSecret" />
+    <text-input
+      id="clientSecret"
+      formControlName="clientSecret"
+      autocomplete="on"
+    />
   </div>
   <div class="form-input">
     <gdb-btn [isDisabled]="!loginForm.valid" text="Login"></gdb-btn>
