--- a/src/components/text-input/text-input.component.html
+++ b/src/components/text-input/text-input.component.html
@@ -5,4 +5,6 @@
   [placeholder]="placeholder"
   (focus)="onTouched()"
   (keyup)="onChanges($event)"
+  autocomplete="on"
+  [id]="placeholder"
 />
