refs #0 Author change

--- a/src/app/pages/authentication/auth/auth.component.html
+++ b/src/app/pages/authentication/auth/auth.component.html
@@ -21,4 +21,11 @@
     </div>
     }
   </div>
+
+  <div class="d-flex justify-content-center">
+    Feedbacks and suggestions are always accepted -
+    <a style="color: #4067fe" href="mailto:emailforprasanth@gmail.com">
+      emailforprasanth&#64;gmail.com</a
+    >
+  </div>
 </div>
