refs #0 minor update subject

--- a/src/app/pages/authentication/auth/auth.component.html
+++ b/src/app/pages/authentication/auth/auth.component.html
@@ -24,7 +24,10 @@
 
   <div class="d-flex justify-content-center">
     Feedbacks and suggestions are always accepted -
-    <a style="color: #4067fe" href="mailto:emailforprasanth@gmail.com">
+    <a
+      style="color: #4067fe"
+      href="mailto:emailforprasanth@gmail.com?subject=Suggestions/Feedbacks regarding Easy-Keycloak"
+    >
       emailforprasanth&#64;gmail.com</a
     >
   </div>
